.docker/repman.yml
# База Postgres
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17-alpine
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          hostPath:
            path: /opt/repman/database
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
---
# Приложение Repman
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repman
spec:
  selector:
    matchLabels:
      app: repman
  template:
    metadata:
      labels:
        app: repman
    spec:
      containers:
        - name: php
          image: buddy/repman:latest
          volumeMounts:
            - name: code-volume
              mountPath: /app
            - name: repman-data
              mountPath: /app/var
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: code-volume
              mountPath: /app
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: code-volume
          emptyDir: {}
        - name: repman-data
          hostPath:
            path: /opt/repman/data
        - name: nginx-config
          configMap:
            name: repman-nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: repman
spec:
  selector:
    app: repman
  ports:
    - port: 80
---
# Вход (Ingress + SSL)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: repman-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/clusterissuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - repman.b220.ru
      secretName: repman-tls-secret
  rules:
    - host: repman.b220.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: repman
                port:
                  number: 80
